Fix photos width on mobile

--- a/style.css
+++ b/style.css
@@ -565,6 +565,7 @@ body {
     }
 
     .gallery__item {
+        width: 100%;
         border-top: 2px solid var(--main-color);
         margin-bottom: var(--item-margin-bottom);
     }
